updated the plan

--- a/Mobile_Recharge/backend/src/main/resources/application.properties
+++ b/Mobile_Recharge/backend/src/main/resources/application.properties
@@ -18,8 +18,8 @@ spring.jpa.show-sql=true
 # Email configuration (for sending recharge confirmation emails)
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=nanijohn460@gmail.com 
-spring.mail.password=bljr aumo utxv qits  
+spring.mail.username=gnaneswara24@gmail.com
+spring.mail.password=zqhk wfoy rnjt xvsx
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
