--- a/Mobile_Recharge/mobile_recharge_frontend/angular.json
+++ b/Mobile_Recharge/mobile_recharge_frontend/angular.json
@@ -59,6 +59,9 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "proxyConfig": "proxy.conf.json"
+          },
           "configurations": {
             "production": {
               "buildTarget": "mobile_recharge_frontend:build:production"
